force-app/main/default/objects/Subscription__c/fields/External_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Subscription_ID__c</fullName>
    <label>External Subscription ID</label>
    <type>Text</type>
    <length>100</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>