force-app/main/default/objects/Subscription__c/fields/Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Amount__c</fullName>
    <label>Subscription Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>