force-app/main/default/objects/Subscription__c/validationRules/Active_Sub_Requires_Billing_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Sub_Requires_Billing_Frequency</fullName>
    <active>true</active>
    <description>Ensures an Active subscription has a Billing Frequency so recurring invoice generation can calculate the correct billing cycle.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Active&quot;),
    ISBLANK(TEXT(Billing_Frequency__c))
)</errorConditionFormula>
    <errorDisplayField>Billing_Frequency__c</errorDisplayField>
    <errorMessage>Billing Frequency is required when the Subscription is Active.</errorMessage>
</ValidationRule>