force-app/main/default/objects/Subscription__c/validationRules/Cancellation_Date_Cannot_Be_Before_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Date_Cannot_Be_Before_Start</fullName>
    <active>true</active>
    <description>Prevents a subscription Cancellation Date from being earlier than its Start Date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Cancellation_Date__c)),
    NOT(ISBLANK(Start_Date__c)),
    Cancellation_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Date__c</errorDisplayField>
    <errorMessage>Cancellation Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>