force-app/main/default/objects/Subscription__c/validationRules/Subscription_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Subscription_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Prevents a subscription from having a zero or negative subscription amount.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Subscription_Amount__c)),
    Subscription_Amount__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Subscription_Amount__c</errorDisplayField>
    <errorMessage>Subscription Amount must be greater than zero.</errorMessage>
</ValidationRule>